Fix flicker

--- a/source/sass/components/sally/_sally.scss
+++ b/source/sass/components/sally/_sally.scss
@@ -8,6 +8,7 @@
 .is-stand-by {
     animation: sallyStandBy 4000ms infinite linear;
     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     will-change: transform;
 }
 
